api for publishers to store book
